--- a/_posts/2024-08-12-interesting-links-2024-08-05.md
+++ b/_posts/2024-08-12-interesting-links-2024-08-05.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, August 5, 2024"
 date: 2024-08-12
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [design](#design) - [general](#general)
@@ -22,5 +25,5 @@ Tags  - [design](#design) - [general](#general)
 </div>
 
 
-
+---
 [More Links](/links)
