--- a/_posts/2024-08-26-interesting-links-2024-08-19.md
+++ b/_posts/2024-08-26-interesting-links-2024-08-19.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, August 19, 2024"
 date: 2024-08-26
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [AI](#AI) - [development](#development) - [thinking](#thinking)
@@ -29,5 +32,5 @@ Tags  - [AI](#AI) - [development](#development) - [thinking](#thinking)
 </div>
 
 
-
+---
 [More Links](/links)
