--- a/_posts/2024-09-02-interesting-links-2024-08-26.md
+++ b/_posts/2024-09-02-interesting-links-2024-08-26.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, August 26, 2024"
 date: 2024-09-02
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [development](#development) - [fun](#fun) - [inspiration](#inspiration) - [security](#security) - [thinking](#thinking)
@@ -65,5 +68,5 @@ Tags  - [development](#development) - [fun](#fun) - [inspiration](#inspiration) 
 </div>
 
 
-
+---
 [More Links](/links)
