--- a/_posts/2024-09-09-interesting-links-2024-09-02.md
+++ b/_posts/2024-09-09-interesting-links-2024-09-02.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, September 2, 2024"
 date: 2024-09-09
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [jobs](#jobs) - [thinking](#thinking)
@@ -22,5 +25,5 @@ Tags  - [jobs](#jobs) - [thinking](#thinking)
 </div>
 
 
-
+---
 [More Links](/links)
