--- a/_posts/2024-10-07-interesting-links-2024-09-30.md
+++ b/_posts/2024-10-07-interesting-links-2024-09-30.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, September 30, 2024"
 date: 2024-10-07
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [AI](#AI) - [art](#art) - [design](#design) - [fun](#fun) - [general](#general) - [inspiration](#inspiration) - [jobs](#jobs) - [leadership](#leadership) - [security](#security) - [tech](#tech)
@@ -153,5 +156,5 @@ Tags  - [AI](#AI) - [art](#art) - [design](#design) - [fun](#fun) - [general](#g
 </div>
 
 
-
+---
 [More Links](/links)
