--- a/_posts/2024-10-14-interesting-links-2024-10-07.md
+++ b/_posts/2024-10-14-interesting-links-2024-10-07.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, October 7, 2024"
 date: 2024-10-14
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [AI](#AI) - [art](#art) - [design](#design) - [development](#development) - [eink](#eink) - [general](#general) - [inspiration](#inspiration) - [jobs](#jobs) - [security](#security) - [tech](#tech) - [thinking](#thinking) - [ui](#ui)
@@ -264,5 +267,5 @@ Tags  - [AI](#AI) - [art](#art) - [design](#design) - [development](#development
 </div>
 
 
-
+---
 [More Links](/links)
