--- a/_posts/2024-10-21-interesting-links-2024-10-14.md
+++ b/_posts/2024-10-21-interesting-links-2024-10-14.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, October 14, 2024"
 date: 2024-10-21
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [general](#general)
@@ -162,5 +165,5 @@ Tags  - [general](#general)
 </div>
 
 
-
+---
 [More Links](/links)
