--- a/_posts/2024-11-11-interesting-links-2024-11-04.md
+++ b/_posts/2024-11-11-interesting-links-2024-11-04.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, November 4, 2024"
 date: 2024-11-11
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [development](#development) - [fun](#fun) - [general](#general) - [jobs](#jobs) - [security](#security) - [tech](#tech) - [thinking](#thinking)
@@ -82,5 +85,5 @@ Tags  - [development](#development) - [fun](#fun) - [general](#general) - [jobs]
 </div>
 
 
-
+---
 [More Links](/links)
