--- a/_posts/2024-11-18-interesting-links-2024-11-11.md
+++ b/_posts/2024-11-18-interesting-links-2024-11-11.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, November 11, 2024"
 date: 2024-11-18
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [AI](#AI) - [design](#design) - [development](#development) - [ebikes](#ebikes) - [eink](#eink) - [fun](#fun) - [jobs](#jobs) - [leadership](#leadership) - [nature](#nature) - [security](#security) - [tech](#tech) - [ui](#ui)
@@ -206,6 +209,6 @@ Tags  - [AI](#AI) - [design](#design) - [development](#development) - [ebikes](#
 </div>
 </div>
 
----
 
+---
 [More Links](/links)
