--- a/_posts/2024-08-19-interesting-links-2024-08-12.md
+++ b/_posts/2024-08-19-interesting-links-2024-08-12.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, August 12, 2024"
 date: 2024-08-19
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [art](#art) - [general](#general)
@@ -27,5 +30,5 @@ Tags  - [art](#art) - [general](#general)
 </div>
 
 
-
+---
 [More Links](/links)
