--- a/_posts/2024-09-16-interesting-links-2024-09-09.md
+++ b/_posts/2024-09-16-interesting-links-2024-09-09.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, September 9, 2024"
 date: 2024-09-16
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [art](#art) - [development](#development) - [inspiration](#inspiration) - [security](#security)
@@ -34,5 +37,5 @@ Tags  - [art](#art) - [development](#development) - [inspiration](#inspiration) 
 </div>
 
 
-
+---
 [More Links](/links)
