--- a/_posts/2024-09-23-interesting-links-2024-09-16.md
+++ b/_posts/2024-09-23-interesting-links-2024-09-16.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, September 16, 2024"
 date: 2024-09-23
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [AI](#AI) - [design](#design) - [development](#development) - [general](#general) - [inspiration](#inspiration) - [leadership](#leadership) - [thinking](#thinking)
@@ -108,5 +111,5 @@ Tags  - [AI](#AI) - [design](#design) - [development](#development) - [general](
 </div>
 
 
-
+---
 [More Links](/links)
