--- a/_posts/2024-09-30-interesting-links-2024-09-23.md
+++ b/_posts/2024-09-30-interesting-links-2024-09-23.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, September 23, 2024"
 date: 2024-09-30
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [AI](#AI) - [art](#art) - [design](#design) - [development](#development) - [fun](#fun) - [general](#general) - [inspiration](#inspiration) - [jobs](#jobs) - [leadership](#leadership) - [security](#security) - [tech](#tech) - [thinking](#thinking)
@@ -180,5 +183,5 @@ Tags  - [AI](#AI) - [art](#art) - [design](#design) - [development](#development
 </div>
 
 
-
+---
 [More Links](/links)
