--- a/_posts/2024-11-04-interesting-links-2024-10-28.md
+++ b/_posts/2024-11-04-interesting-links-2024-10-28.md
@@ -2,6 +2,9 @@
 title:  "Interesting Links for the Week of Monday, October 28, 2024"
 date: 2024-11-04
 categories: links
+header:
+  teaser: /assets/images/interesting-links.png
+  tagline: "What is new and interesting in the world of tech, design, and leadership?"
 ---
 
 Tags  - [development](#development) - [general](#general) - [jobs](#jobs) - [leadership](#leadership) - [tech](#tech)
@@ -257,5 +260,5 @@ Tags  - [development](#development) - [general](#general) - [jobs](#jobs) - [lea
 </div>
 
 
-
+---
 [More Links](/links)
