comments in progress

--- a/_posts/2024-11-18-interesting-links-2024-11-11.md
+++ b/_posts/2024-11-18-interesting-links-2024-11-11.md
@@ -5,6 +5,8 @@ categories: links
 header:
   teaser: /assets/images/interesting-links.png
   tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  toc: true
+comments: true
 ---
 
 Tags  - [AI](#AI) - [design](#design) - [development](#development) - [ebikes](#ebikes) - [eink](#eink) - [fun](#fun) - [jobs](#jobs) - [leadership](#leadership) - [nature](#nature) - [security](#security) - [tech](#tech) - [ui](#ui)
