update tag pages

--- a/_posts/2024-11-18-interesting-links-2024-11-11.md
+++ b/_posts/2024-11-18-interesting-links-2024-11-11.md
@@ -1,15 +1,18 @@
 ---
 title:  "Interesting Links for the Week of Monday, November 11, 2024"
+description: "What is new and interesting in the world of tech, design, and leadership?"
+exerpt: "What is new and interesting in the world of tech, design, and leadership?"
 date: 2024-11-18
-categories: links
+category: links
+tags: ["AI", "design", "development", "ebikes", "eink", "fun", "jobs", "leadership", "nature", "security", "tech", "ui"]
 header:
   teaser: /assets/images/interesting-links.png
   tagline: "What is new and interesting in the world of tech, design, and leadership?"
-  toc: true
+toc: true
 comments: true
 ---
 
-Tags  - [AI](#AI) - [design](#design) - [development](#development) - [ebikes](#ebikes) - [eink](#eink) - [fun](#fun) - [jobs](#jobs) - [leadership](#leadership) - [nature](#nature) - [security](#security) - [tech](#tech) - [ui](#ui)
+<!-- Tags  - [AI](#AI) - [design](#design) - [development](#development) - [ebikes](#ebikes) - [eink](#eink) - [fun](#fun) - [jobs](#jobs) - [leadership](#leadership) - [nature](#nature) - [security](#security) - [tech](#tech) - [ui](#ui) -->
 
 
 ## AI
