updated links format

--- a/_posts/2024-08-12-interesting-links-2024-08-05.md
+++ b/_posts/2024-08-12-interesting-links-2024-08-05.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, August 5, 2024"
+title:  'Interesting Links for the Week of Monday, August 5, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-08-12
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["design","general",]
+comments: true
+toc: true
 ---
-
-Tags  - [design](#design) - [general](#general)
-
 
 ## design
 <div class="link-content"><img src='https://www.yankodesign.com/images/design_news/2024/08/what-are-the-7-elements-of-interior-design/00-elements-interior-1.jpg' class="link-image"/>
