--- a/_posts/2024-08-19-interesting-links-2024-08-12.md
+++ b/_posts/2024-08-19-interesting-links-2024-08-12.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, August 12, 2024"
+title:  'Interesting Links for the Week of Monday, August 12, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-08-19
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["art","general",]
+comments: true
+toc: true
 ---
-
-Tags  - [art](#art) - [general](#general)
-
 
 ## art
 <div class="link-content"><img src='https://s32625.pcdn.co/wp-content/uploads/2021/09/an-favicon-152x152-1-100x100.png' class="link-image"/>
