--- a/_posts/2024-08-26-interesting-links-2024-08-19.md
+++ b/_posts/2024-08-26-interesting-links-2024-08-19.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, August 19, 2024"
+title:  'Interesting Links for the Week of Monday, August 19, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-08-26
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["AI","development","thinking",]
+comments: true
+toc: true
 ---
-
-Tags  - [AI](#AI) - [development](#development) - [thinking](#thinking)
-
 
 ## AI
 <div class="link-content"><img src='https://cdn.openai.com/API/images/opengraph.png' class="link-image"/>
