--- a/_posts/2024-09-02-interesting-links-2024-08-26.md
+++ b/_posts/2024-09-02-interesting-links-2024-08-26.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, August 26, 2024"
+title:  'Interesting Links for the Week of Monday, August 26, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-09-02
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["development","fun","inspiration","security","thinking",]
+comments: true
+toc: true
 ---
-
-Tags  - [development](#development) - [fun](#fun) - [inspiration](#inspiration) - [security](#security) - [thinking](#thinking)
-
 
 ## development
 <div class="link-content"><img src='https://i.ytimg.com/vi/_bP14OzIJWI/maxresdefault.jpg' class="link-image"/>
