--- a/_posts/2024-09-09-interesting-links-2024-09-02.md
+++ b/_posts/2024-09-09-interesting-links-2024-09-02.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, September 2, 2024"
+title:  'Interesting Links for the Week of Monday, September 2, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-09-09
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["jobs","thinking",]
+comments: true
+toc: true
 ---
-
-Tags  - [jobs](#jobs) - [thinking](#thinking)
-
 
 ## jobs
 <div class="link-content"><img src='https://substackcdn.com/image/fetch/w_1200,h_600,c_fill,f_jpg,q_auto:good,fl_progressive:steep,g_auto/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F7a988972-0426-4d59-9ef4-c0ed17f69306_815x424.png' class="link-image"/>
