--- a/_posts/2024-09-16-interesting-links-2024-09-09.md
+++ b/_posts/2024-09-16-interesting-links-2024-09-09.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, September 9, 2024"
+title:  'Interesting Links for the Week of Monday, September 9, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-09-16
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["art","development","inspiration","security",]
+comments: true
+toc: true
 ---
-
-Tags  - [art](#art) - [development](#development) - [inspiration](#inspiration) - [security](#security)
-
 
 ## art
 <div class="link-content"><img src='https://cdn.mos.cms.futurecdn.net/vYoqXRARWVHM2pXqi6zs2D.jpg' class="link-image"/>
