--- a/_posts/2024-10-14-interesting-links-2024-10-07.md
+++ b/_posts/2024-10-14-interesting-links-2024-10-07.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, October 7, 2024"
+title:  'Interesting Links for the Week of Monday, October 7, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-10-14
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["AI","art","design","development","eink","general","inspiration","jobs","security","tech","thinking","ui",]
+comments: true
+toc: true
 ---
-
-Tags  - [AI](#AI) - [art](#art) - [design](#design) - [development](#development) - [eink](#eink) - [general](#general) - [inspiration](#inspiration) - [jobs](#jobs) - [security](#security) - [tech](#tech) - [thinking](#thinking) - [ui](#ui)
-
 
 ## AI
 <div class="link-content"><img src='https://hbr.org/favicon.ico' class="link-image"/>
