--- a/_posts/2024-10-28-interesting-links-2024-10-21.md
+++ b/_posts/2024-10-28-interesting-links-2024-10-21.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, October 21, 2024"
+title:  'Interesting Links for the Week of Monday, October 21, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-10-28
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["general",]
+comments: true
+toc: true
 ---
-
-Tags  - [general](#general)
-
 
 ## general
 <div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
