--- a/_posts/2024-11-11-interesting-links-2024-11-04.md
+++ b/_posts/2024-11-11-interesting-links-2024-11-04.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, November 4, 2024"
+title:  'Interesting Links for the Week of Monday, November 4, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-11-11
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["development","fun","general","jobs","security","tech","thinking",]
+comments: true
+toc: true
 ---
-
-Tags  - [development](#development) - [fun](#fun) - [general](#general) - [jobs](#jobs) - [security](#security) - [tech](#tech) - [thinking](#thinking)
-
 
 ## development
 <div class="link-content"><img src='https://res.infoq.com/news/2024/11/modern-web-app-dotnet/en/headerimage/twitter_card+%2831%29-1730838267497.jpg' class="link-image"/>
