--- a/_posts/2024-11-18-interesting-links-2024-11-11.md
+++ b/_posts/2024-11-18-interesting-links-2024-11-11.md
@@ -1,19 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, November 11, 2024"
-description: "What is new and interesting in the world of tech, design, and leadership?"
-exerpt: "What is new and interesting in the world of tech, design, and leadership?"
+title:  'Interesting Links for the Week of Monday, November 11, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-11-18
 category: links
-tags: ["AI", "design", "development", "ebikes", "eink", "fun", "jobs", "leadership", "nature", "security", "tech", "ui"]
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
-toc: true
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["AI","design","development","ebikes","eink","fun","general","jobs","leadership","nature","security","tech","ui",]
 comments: true
+toc: true
 ---
-
-<!-- Tags  - [AI](#AI) - [design](#design) - [development](#development) - [ebikes](#ebikes) - [eink](#eink) - [fun](#fun) - [jobs](#jobs) - [leadership](#leadership) - [nature](#nature) - [security](#security) - [tech](#tech) - [ui](#ui) -->
-
 
 ## AI
 <div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
@@ -114,6 +111,18 @@ comments: true
 <div class="link-content"><img src='https://news.ycombinator.com/y18.svg' class="link-image"/>
 <div class="link-text" markdown="1">
   [Visual Basic 6 IDE recreated in C# - Comments](https://github.com/BAndysc/AvaloniaVisualBasic6) (GitHub - Hacker News)
+</div>
+</div>
+
+## general
+<div class="link-content"><img src='https://rohitbhargava.com/images/2022/01/cropped-Mask-Group-1-32x32.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Why Do So Many Companies Want People Back in The Office Now? - The future of work is hybrid. If there was one...](https://rohitbhargava.com/why-do-so-many-companies-want-people-back-in-the-office-now/) (Rohit Bhargava - Rohit Bhargava)
+</div>
+</div>
+<div class="link-content"><img src='https://spin.atomicobject.com/wp-content/uploads/AO_DTAcademy-01-01.png' class="link-image"/>
+<div class="link-text" markdown="1">
+  [Design Thinking Toolkit, Activity 23 – Crazy 8s - It’s time to ideate, so bust out some paper, put...](https://feeds.feedblitz.com/~/908095160/0/atomicspin~Design-Thinking-Toolkit-Activity-%e2%80%93-Crazy-s/) (Marginal REVOLUTION - Kimberly Crawford)
 </div>
 </div>
 
