--- a/_posts/2024-09-30-interesting-links-2024-09-23.md
+++ b/_posts/2024-09-30-interesting-links-2024-09-23.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, September 23, 2024"
+title:  'Interesting Links for the Week of Monday, September 23, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-09-30
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["AI","art","design","development","fun","general","inspiration","jobs","leadership","security","tech","thinking",]
+comments: true
+toc: true
 ---
-
-Tags  - [AI](#AI) - [art](#art) - [design](#design) - [development](#development) - [fun](#fun) - [general](#general) - [inspiration](#inspiration) - [jobs](#jobs) - [leadership](#leadership) - [security](#security) - [tech](#tech) - [thinking](#thinking)
-
 
 ## AI
 <div class="link-content"><img src='http://www.techmeme.com/240930/i24.jpg' class="link-image"/>
