--- a/_posts/2024-11-04-interesting-links-2024-10-28.md
+++ b/_posts/2024-11-04-interesting-links-2024-10-28.md
@@ -1,14 +1,16 @@
 ---
-title:  "Interesting Links for the Week of Monday, October 28, 2024"
+title:  'Interesting Links for the Week of Monday, October 28, 2024'
+description: 'What is new and interesting in the world of tech, design, and leadership?'
+exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-11-04
-categories: links
+category: links
 header:
   teaser: /assets/images/interesting-links.png
-  tagline: "What is new and interesting in the world of tech, design, and leadership?"
+  tagline: 'What is new and interesting in the world of tech, design, and leadership?'
+tags: ["development","general","jobs","leadership","tech",]
+comments: true
+toc: true
 ---
-
-Tags  - [development](#development) - [general](#general) - [jobs](#jobs) - [leadership](#leadership) - [tech](#tech)
-
 
 ## development
 <div class="link-content"><img src='https://timdeschryver.dev/blog/what-about-my-api-documentation-now-that-swashbuckle-is-no-longer-a-dependency-in-aspnet-9/images/banner.png' class="link-image"/>
