--- a/_posts/2024-10-07-interesting-links-2024-09-30.md
+++ b/_posts/2024-10-07-interesting-links-2024-09-30.md
@@ -1,15 +1,17 @@
 ---
 title:  'Interesting Links for the Week of Monday, September 30, 2024'
 description: 'What is new and interesting in the world of tech, design, and leadership?'
-exerpt: 'What is new and interesting in the world of tech, design, and leadership?'
+excerpt: 'What is new and interesting in the world of tech, design, and leadership?'
 date: 2024-10-07
 category: links
 header:
+  overlay_image: /assets/images/interesting-links-header.png
   teaser: /assets/images/interesting-links.png
   tagline: 'What is new and interesting in the world of tech, design, and leadership?'
 tags: ["AI","art","design","fun","general","inspiration","jobs","leadership","security","tech",]
 comments: true
 toc: true
+breadcrumbs: true
 ---
 
 ## AI
